Updated gradle instructions

--- a/Source/F32ForAndroid/f32/build.gradle
+++ b/Source/F32ForAndroid/f32/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 }
 
 ext {
-    bintrayRepo = 'maven'
+    bintrayRepo = 'F32-for-Android'
     bintrayName = 'f32'
 
     publishedGroupId = 'com.visuality.f32forandroid'
