--- a/Source/F32ForAndroid/f32/build.gradle
+++ b/Source/F32ForAndroid/f32/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         minSdkVersion 15
@@ -45,7 +45,7 @@ ext {
     siteUrl = 'https://github.com/igormatyushkin014/F32-for-Android'
     gitUrl = 'https://github.com/igormatyushkin014/F32-for-Android.git'
 
-    libraryVersion = '2.3.2'
+    libraryVersion = '2.4'
 
     developerId = 'igormatyushkin'
     developerName = 'Igor Matyushkin'
